--- a/evaluacion_final/educacion.html
+++ b/evaluacion_final/educacion.html
@@ -6,117 +6,6 @@
 	<title></title>
 </head>
 <body>
-	<svg
-	style="border: 2px solid black;"
-   xmlns:dc="http://purl.org/dc/elements/1.1/"
-   xmlns:cc="http://creativecommons.org/ns#"
-   xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-   xmlns:svg="http://www.w3.org/2000/svg"
-   xmlns="http://www.w3.org/2000/svg"
-   xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
-   xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
-   width="200"
-   height="200"
-   viewBox="10 50 200 200"
-   version="1.1"
-   id="svg8"
-   inkscape:version="0.92.3 (2405546, 2018-03-11)"
-   sodipodi:docname="logo.svg">
-  <defs
-     id="defs2" />
-  <sodipodi:namedview
-     id="base"
-     pagecolor="#ffffff"
-     bordercolor="#666666"
-     borderopacity="1.0"
-     inkscape:pageopacity="0.0"
-     inkscape:pageshadow="2"
-     inkscape:zoom="0.35"
-     inkscape:cx="400"
-     inkscape:cy="560"
-     inkscape:document-units="mm"
-     inkscape:current-layer="layer1"
-     showgrid="false"
-     inkscape:window-width="1366"
-     inkscape:window-height="705"
-     inkscape:window-x="-8"
-     inkscape:window-y="-8"
-     inkscape:window-maximized="1" />
-  <metadata
-     id="metadata5">
-    <rdf:RDF>
-      <cc:Work
-         rdf:about="">
-        <dc:format>image/svg+xml</dc:format>
-        <dc:type
-           rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
-        <dc:title></dc:title>
-      </cc:Work>
-    </rdf:RDF>
-  </metadata>
-  <g
-     inkscape:label="Capa 1"
-     inkscape:groupmode="layer"
-     id="layer1">
-    <flowRoot
-       xml:space="preserve"
-       id="flowRoot3713"
-       style="font-style:normal;font-weight:normal;font-size:40px;line-height:1.25;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;fill:#000000;fill-opacity:1;stroke:none"
-       transform="scale(0.26458333)"><flowRegion
-         id="flowRegion3715"><rect
-           id="rect3717"
-           width="214.28572"
-           height="314.28571"
-           x="142.85715"
-           y="191.09111" /></flowRegion><flowPara
-         id="flowPara3719" /></flowRoot>    <flowRoot
-       xml:space="preserve"
-       id="flowRoot3721"
-       style="fill:black;fill-opacity:1;stroke:none;font-family:sans-serif;font-style:normal;font-weight:normal;font-size:40px;line-height:1.25;letter-spacing:0px;word-spacing:0px"><flowRegion
-         id="flowRegion3723"><rect
-           id="rect3725"
-           width="134.28572"
-           height="208.57143"
-           x="205.71428"
-           y="285.37683" /></flowRegion><flowPara
-         id="flowPara3727"></flowPara></flowRoot>    <g
-       aria-label="A"
-       transform="matrix(1.0276442,0,0,0.97309944,-3.7797619,-15.875)"
-       style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:78.55886078px;line-height:1.25;font-family:Vivaldi;-inkscape-font-specification:Vivaldi;letter-spacing:0px;word-spacing:0px;fill:#d45500;fill-opacity:1;stroke:none;stroke-width:1.96397138"
-       id="text3731">
-      <path
-         d="m 112.95425,139.91391 1.07405,0.99733 q -1.61107,1.80287 -2.10974,3.33722 -0.49867,1.53435 -0.49867,4.71813 0,13.042 5.83055,31.3008 3.2605,10.12673 5.10172,10.12673 0.88226,0 2.83856,-2.03302 l 0.95897,0.92061 -0.46031,0.49867 q -3.29886,3.52901 -6.02233,6.82787 l -0.76718,0.95897 q -4.87157,-10.08837 -8.17044,-21.97961 -3.2605,-11.89123 -3.2605,-19.3712 0,-3.14542 0.46031,-7.21146 l 0.11508,-1.03569 q -3.06871,3.18379 -9.397922,11.12406 -3.950952,4.94829 -7.134731,8.55402 l -0.88225,0.99733 q 2.109729,-0.15344 4.718129,-0.15344 l 11.162424,0.1918 1.5727,0.0767 q -1.38091,3.83589 -2.68511,9.51299 h -1.45764 q 0.53703,-2.07137 0.53703,-3.22214 0,-1.45763 -0.99733,-1.91794 -0.99733,-0.46031 -4.104402,-0.46031 h -5.562032 l -6.252479,0.11508 -0.76717,0.0384 -0.99733,0.99733 q -8.28551,8.05535 -11.162418,10.51031 -2.876913,2.45497 -8.51566,6.17577 l -1.074043,0.72882 q 2.723472,-0.23015 5.8689,-0.23015 7.249811,0 11.085692,0.4603 l 7.211459,0.80554 q 2.87691,0.34523 5.178439,0.34523 5.945614,0 9.474634,-3.06871 3.56736,-3.0687 4.41126,-8.97596 1.41927,0.84389 1.41927,2.18645 0,3.29886 -4.41126,7.55669 -6.866232,6.59772 -14.921583,6.59772 -2.68512,0 -7.364887,-0.49867 -11.392564,-1.18912 -17.875214,-1.18912 l -8.055353,0.19179 h -0.728805 l 2.416597,-3.87424 q 10.126733,-3.68244 18.757462,-11.46928 8.63074,-7.78684 24.357853,-27.3882 7.55668,-9.39791 11.0857,-12.77349 z"
-         style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-family:Vivaldi;-inkscape-font-specification:Vivaldi;fill:#d45500;stroke-width:1.96397138"
-         id="path3741"
-         inkscape:connector-curvature="0" />
-    </g>
-    <text
-       xml:space="preserve"
-       style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:82.78373718px;line-height:1.25;font-family:SimSun;-inkscape-font-specification:SimSun;letter-spacing:0px;word-spacing:0px;fill:#800000;fill-opacity:1;stroke:none;stroke-width:2.06959343;"
-       x="114.48328"
-       y="161.25113"
-       id="text3735"
-       transform="scale(0.97585206,1.0247455)"
-       inkscape:transform-center-y="2.2678575"><tspan
-         sodipodi:role="line"
-         id="tspan3733"
-         x="114.48328"
-         y="161.25113"
-         style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-family:SimSun;-inkscape-font-specification:SimSun;fill:#800000;stroke-width:2.06959343;">C</tspan></text>
-    <path
-       style="opacity:0.27700004;fill:#d44800;fill-opacity:1;stroke-width:0.26458332"
-       id="path7766"
-       sodipodi:type="arc"
-       sodipodi:cx="107.34524"
-       sodipodi:cy="145.43155"
-       sodipodi:rx="65.767853"
-       sodipodi:ry="60.854164"
-       sodipodi:start="0"
-       sodipodi:end="6.076643"
-       sodipodi:open="true"
-       d="M 173.11309,145.43155 A 65.767853,60.854164 0 0 1 110.73969,206.20461 65.767853,60.854164 0 0 1 41.927778,151.70486 65.767853,60.854164 0 0 1 97.198051,85.306057 65.767853,60.854164 0 0 1 171.71525,132.95176" />
-  </g>
-</svg>
-
+  <header><img src="images/logo.svg" width="300"></header>
 </body>
 </html>.
