Actualizacion en Educacion
Agregue tablas en educacion

--- a/evaluacion_final/educacion.html
+++ b/evaluacion_final/educacion.html
@@ -3,9 +3,54 @@
 <head>
 	<meta charset="utf-8">
 	<meta name=viewport content="width=device-width,user-scalable=no">
-	<title></title>
+	<title>Hoja de Vida</title>
 </head>
 <body>
-  <header><img src="images/logo.svg" width="300"></header>
+<header>
+	<img src="images/logo.svg" width="200">
+	<h1>Curriculum Vitae</h1>
+	<h2>Claudio Ariel Cabeza</h2>
+	<h3>17 de Febrero de 1983 - Chilecito - La Rioja - Argentina</h3>
+<nav>	
+	<a href="index.html">Inicio</a> | <a href="educacion.html">Educación</a> | <a href="experiencia.html">Experiencia</a>
+</nav>
+</header>
+	<h2>Educación</h2>
+	<!--Utilizo el atributo border y cellpadding para diferenciar la tabla pero se que no se debe usar ya que esto se haría con CSS-->
+	<table border="1" cellpadding="5">
+		<tr>
+			<th>Año</th>
+			<th>Institución</th>
+			<th>Lugar</th>
+			<th>Culminó</th>
+		</tr>
+		<tr>
+			<td>1995 - 2000</td>
+			<td>Esc. Comercio </td>
+			<td>Chilecito - L.R</td>
+			<td>Si</td>
+		</tr>
+		<tr>
+			<td>2001 - 2004</td>
+			<td>Univesidad Nacional de Chilecito </td>
+			<td>Chilecito - L.R</td>
+			<td>No</td>
+		</tr>
+		<tr>
+			<td>2005 - 2008</td>
+			<td>Prof de Musica </td>
+			<td>La Rioja</td>
+			<td>No</td>
+		</tr>
+		<tr>
+			<td>2008 - 2012</td>
+			<td>Siglo XX1 </td>
+			<td>Córdoba</td>
+			<td>No</td>
+		</tr>
+	</table>
 </body>
-</html>.
+<footer>
+	<p><a href="mailto:cervanteslibch@gmail.com">cervanteslibch@gmail.com</a> | Tel. +543825 - 670079 </p>
+</footer>
+</html>
