--- a/evaluacion_final/index.html
+++ b/evaluacion_final/index.html
@@ -12,7 +12,7 @@
 	<h2>Claudio Ariel Cabeza</h2>
 	<h3>17 de Febrero de 1983 - Chilecito - La Rioja - Argentina</h3>
 <nav>	
-	<a href="educacion.html">Educación</a> | <a href="experiencia.html">Experiencia</a>
+	<a href="index.html">Inicio</a> | <a href="educacion.html">Educación</a> | <a href="experiencia.html">Experiencia</a>
 </nav>
 </header>
 	<h2>Información Personal</h2>
@@ -29,4 +29,4 @@
 <footer>
 	<p><a href="mailto:cervanteslibch@gmail.com">cervanteslibch@gmail.com</a> | Tel. +543825 - 670079 </p>
 </footer>
-</html>.
+</html>
