--- a/evaluacion_final/educacion.html
+++ b/evaluacion_final/educacion.html
@@ -49,6 +49,23 @@
 			<td>No</td>
 		</tr>
 	</table>
+	<h3>Agregar Estudios</h3>
+	<form autocomplete="on" name="Formulario de educacion">
+		<label for="año"><strong>Año:</strong></label>
+		<select name="año">
+			<option>2013</option>
+			<option>2014</option>
+			<option>2015</option>
+			<option>2016</option>
+			<option>2017</option>
+			<option>2018</option>
+		</select> <br>
+		<label for="Institución"><strong>Institución:</strong></label>
+		<input type="text" name="Institucion" required> <br>
+		<label for="lugar"><strong>Lugar:</strong></label>
+		<textarea name="lugar" rows="2" cols="20"></textarea><br>
+		<input type="submit" name="enviar">
+	</form>
 </body>
 <footer>
 	<p><a href="mailto:cervanteslibch@gmail.com">cervanteslibch@gmail.com</a> | Tel. +543825 - 670079 </p>
