--- a/evaluacion_final/educacion.html
+++ b/evaluacion_final/educacion.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name=viewport content="width=device-width,user-scalable=no">
-	<title>Hoja de Vida</title>
+	<title>Educación</title>
 </head>
 <body>
 <header>
