--- a/evaluacion_final/experiencia.html
+++ b/evaluacion_final/experiencia.html
@@ -3,31 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name=viewport content="width=device-width,user-scalable=no">
-	<title>Hoja de Vida</title>
+	<title></title>
 </head>
 <body>
-<header>
-	<img src="images/logo.svg" width="200">
-	<h1>Curriculum Vitae</h1>
-	<h2>Claudio Ariel Cabeza</h2>
-	<h3>17 de Febrero de 1983 - Chilecito - La Rioja - Argentina</h3>
-<nav>	
-	<a href="index.html">Inicio</a> | <a href="educacion.html">Educación</a> | <a href="experiencia.html">Experiencia</a>
-</nav>
-</header>
-	<h2>Experiencia</h2>
-	<h3>Mis habilidades y aspiraciones profesionales</h3>
-	<video controls poster="images/habilidades.png" width="300" height="300">
-		<source src="videos_audios/videoexp.mp4" type="video/mp4">
-		<source src="videos_audios/videoexp.avi" type="video/avi">
-		<source src="videos_audios/videoexp.mpg" type="video/mpg">
-		<source src="videos_audios/videoexp.wmv" type="video/wmv">
-		Lo siento, tu navegador no puede reproducir este video
-	</video>
-	<h3>Mis Hobbies</h3>
-	<audio src="videos_audios/audiohobbie.mp3" controls></audio>
+
 </body>
-<footer>
-	<p><a href="mailto:cervanteslibch@gmail.com">cervanteslibch@gmail.com</a> | Tel. +543825 - 670079 </p>
-</footer>
-</html>
+</html>.
